fix z-index for LatestTx popup

--- a/src/app/sections/LatestTx.module.scss
+++ b/src/app/sections/LatestTx.module.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: calc(100% + var(--grid-gap));
   right: var(--grid-gap);
-  z-index: 1;
+  z-index: 12;
 
   background: var(--card-bg);
   border-radius: var(--border-radius);
